# django_otel_poc

./: .env  Dockerfile  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-runtime.txt  requirements.txt
conf/: elasticsearch.yaml  kibana.yml  log4j.ndjson
deployment/: .env  docker-compose.yml
deployment/conf/: apm-server.yml  collector.yml  grafana.ini  log4j.ndjson
deployment/elasticsearch/: Dockerfile
deployment/kibana/: Dockerfile
django_otel_poc/: __init__.py  asgi.py  async_log.py  dev_settings.py  instrumentation.py  settings.py  urls.py  wsgi.py
doc/: REAME.md  collector.puml  elk.puml  elk_everything_to_collector.puml  jaeger.puml
elasticsearch/: Dockerfile
hcms/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
hcms/migrations/: 0001_initial.py  0002_alter_appointment_date.py  0003_alter_doctor_specialization.py
scripts/: run.sh
